--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,16 @@
     }
 }
 
+@media (max-width: 768px) {
+    #projects {
+        scroll-margin-top: 20px;
+    }
+
+    #papers {
+        scroll-margin-top: 20px;
+    }
+}
+
 /* MAIN */
 
 .main {
@@ -524,6 +534,7 @@
 
 .section-5 {
     padding: 50px 0px 50px 0px;
+    margin-top: -60px;
 }
 
 .section-5-text {
