--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@
     padding: 8px 20px !important;
 }
 
+.icons-link {
+    font-weight: bold;
+    color: grey !important;
+    text-decoration: none;
+}
+
 .nav-custom-link {
     font-weight: bold;
     color: #000000 !important;
@@ -1077,8 +1083,9 @@
 /* FOOTER */
 
 .footer {
-    padding: 10px 40px 20px 40px !important;
+    padding: 25px 40px 35px 40px !important;
     background-color: #000000;
+    line-height: 0.8;
 }
 
 .section-footer-inner {
@@ -1087,7 +1094,7 @@
 
 @media (max-width: 426px) {
     .footer {
-        padding: 50px 20px 10px 20px !important;
+        padding: 15px 30px 25px 30px !important;
     }
 
     .footer-text {
